welcome.lessons.welcome.bat.bool2.SquirrelPlay.scala.error
squirrelPlay:3: error: not found: value temps
    if ( isSummer && temps <= 100 ){
                     ^